@@ -1,23 +1,8 @@
 /**
  * @author zeryts
  * @description: 最简单的栈溢出的测试-递归
-    -XX:InitialHeapSize=104857600
-    -XX:MaxHeapSize=104857600
-    -XX:MaxNewSize=52428800
-    -XX:MaxTenuringThreshold=15
-    -XX:NewSize=52428800
-    -XX:OldPLABSize=16
-    -XX:PretenureSizeThreshold=31457280
-    -XX:+PrintGC
-    -XX:+PrintGCDetails
-    -XX:+PrintGCTimeStamps
-    -XX:SurvivorRatio=8
-    -XX:+UseCompressedClassPointers
-    -XX:+UseCompressedOops
-    -XX:+UseConcMarkSweepGC
-    -XX:-UseLargePagesIndividualAllocation
-    -XX:+UseParNewGC
-    -Xss1M || -Xss10M
+
+
 
 
     栈为1M的时候,大小为 11422
